Library/AXL(Library)/C, C++/AXM.h

// Start to detect origin.
// When origin detecting start API is executed, thread which will detect origin of relevant axis in the library is created automatically and it is automatically closed after carrying out of the origin detecting in sequence.
DWORD    __stdcall AxmHomeSetStart(long lAxisNo);
//======== API related to gentry ===========================================================================================================================================================
// Motion module supports gentry move system control which two axes are linked mechanically..
// When set master axis for gentry control by using this API, relevant slave axis synchronizes with master axis and moves.
// However after setting of gentry, even if any move command or stop command is directed, they are ignored
// uSlHomeUse     : Whether to use home of slave axis or not ( 0 - 2)
//             (0 : Search home of master axis without using home of slave axis.)
//             (1 : Search home of master axis, slave axis. Compensating by applying slave dSlOffset value.)
//             (2 : Search home of master axis, slave axis. No compensating by applying slave dSlOffset value.))
// dSlOffset      : Offset value of slave axis
// dSlOffsetRange : Set offset value range of slave axis.
// Caution in use : When gentry is enabled, it is normal operation if the slave axis is verified as Inmotion by AxmStatusReadMotion API in its motion, and verified as True.
//                When slave axis is verified by AxmStatusReadMotion, if InMotion is False then Gantry Enable is not available, therefore verify whether alarm hits limit.
DWORD    __stdcall AxmGantrySetEnable(long lMasterAxisNo, long lSlaveAxisNo, DWORD uSlHomeUse, double dSlOffset, double dSlOffsetRange);
// The method to know offset value of Slave axis.
// A. Servo-On both master and slave.
// B. After set uSlHomeUse = 2 in AxmGantrySetEnableAPI, then search home by using  AxmHomeSetStart API.
// C. After search home, twisted offset value of master axis and slave axis can be seen by reading command value of master axis.
// D. Read Offsetvalue, and put it into dSlOffset argument of AxmGantrySetEnable API.
// E. As dSlOffset value is the slave axis value against to master axis, put its value with reversed sign as ?dSlOffset.
// F. dSIOffsetRange means the range of Slave Offset, it is used to originate error when it is out of the specified range.
// G. If the offset has been input into AxmGantrySetEnable API, in AxmGantrySetEnable API,after  set uSlHomeUse = 1 then search home by using AxmHomeSetStart API.

// In gentry move, return parameter set by user.
DWORD    __stdcall AxmGantryGetEnable(long lMasterAxisNo, DWORD *upSlHomeUse, double *dpSlOffset, double *dpSlORange, DWORD *upGatryOn);
// Motion module releases gentry move system control which two axes are linked mechanically.
DWORD    __stdcall AxmGantrySetDisable(long lMasterAxisNo, long lSlaveAxisNo);
// Only for PCI-Rxx04-MLII.
// Set Synchronous compensation of Gentry System.
// lMasterGain, lSlaveGain : Set % value of Between the two axes about position deviation.
// lMasterGain, lSlaveGain : If Set Input 0 Not Use. Default value : 0%
DWORD    __stdcall AxmGantrySetCompensationGain(long lMasterAxisNo, long lMasterGain, long lSlaveGain);
// Return Synchronous compensation of Gentry System.
DWORD    __stdcall AxmGantryGetCompensationGain(long lMasterAxisNo, long *lpMasterGain, long *lpSlaveGain);
// Set position deviation range between master and slave.
// API for PCI-R1604 / PCI-R3200-MLIII only
// lMasterAxisNo : Gantry Master Axis No
// dErrorRange : Setting value for position deviation range.
// uUse : A value for mode setting.
//      ( 0 : Disable)
//      ( 1 : Normal mode)
//      ( 2 : Flag Latch mode)
//      ( 3 : Flag Latch mode + SSTOP when error is occured)
//      ( 4 : Flag Latch mode + ESTOP when error is occured)
DWORD   __stdcall AxmGantrySetErrorRange(long lMasterAxisNo, double dErrorRange, DWORD uUse);
// Return setting value about position deviation range between master and slave.
DWORD   __stdcall AxmGantryGetErrorRange(long lMasterAxisNo, double *dpErrorRange, DWORD *upUse);
// Return result of comparing position deviation value between master and slave.
// dwpStatus : FALSE(0) -> Range of position deviation between master and slave is less than setting range. (Normal state)
//             TRUE(1)  -> Range of position deviation between master and slave is greater than setting range. (Abnormal state)
// It is returned 'AXT_RT_SUCCESS' only when Gantry Enable && Master/Slave's servo on state is satisfied.
// Call the 'AxmGantryReadErrorRangeComparePos', if you want to reset Latch Flag in case of latch mode.
DWORD   __stdcall AxmGantryReadErrorRangeStatus(long lMasterAxisNo, DWORD *dwpStatus);
// Return position deviation value between master and slave.
// Maintain position deviation value at time of previous error occurrence until next error is occured.
// You should read only when 'dwpStatus' is 1. If you read ComparePos continuously, response speed will be slowed down by overload.
DWORD   __stdcall AxmGantryReadErrorRangeComparePos(long lMasterAxisNo, double *dpComparePos);
//==== Regular interpolation API ============================================================================================================================================;
// Do linear interpolate.
// API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
// For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
DWORD    __stdcall AxmLineMove(long lCoord, double *dpEndPos, double dVel, double dAccel, double dDecel);
// Do linear interpolate. (Software)
// API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
// For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
DWORD    __stdcall AxmLineMoveEx2(long lCoord, double *dpEndPos, double dVel, double dAccel, double dDecel);
// Interpolate 2 axis arc
// API which moves arc interpolation by specifying start point, ending point and center point. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, ending point and center point in the specified  coordinates system.
// For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
// lAxisNo = 2 axis array , dCenterPos = center point X,Y array , dEndPos = ending point X,Y array.
// uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
DWORD   __stdcall AxmCircleCenterMove(long lCoord, long *lAxisNo, double *dCenterPos, double *dEndPos, double dVel, double dAccel, double dDecel, DWORD uCWDir);
// API which arc interpolation moves by specifying middle point and ending point. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying middle point and ending point in the specified  coordinates system.
// For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
// lAxisNo = 2 axis array , dMidPos = middle point, X,Y array , dEndPos = ending point X,Y array, lArcCircle = arc(0), circle(1)
DWORD    __stdcall AxmCirclePointMove(long lCoord, long *lAxisNo, double *dMidPos, double *dEndPos, double dVel, double dAccel, double dDecel, long lArcCircle);
DWORD    __stdcall AxmCirclePointMoveEx(long lCoordNo, long *lAxisNo, double *dpMidPos, double *dpEndPos, double dVel, double dAccel, double dDecel, long lArcCircle, long lArraySize);
// API which arc interpolation moves by specifying start point, ending point and radius. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, ending point and radius in the specified  coordinates system.
// For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
// lAxisNo = 2 axis array , dRadius = radius, dEndPos = ending point X,Y array , uShortDistance = small circle(0), large circle(1)
// uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
DWORD   __stdcall AxmCircleRadiusMove(long lCoord, long *lAxisNo, double dRadius, double *dEndPos, double dVel, double dAccel, double dDecel, DWORD uCWDir, DWORD uShortDistance);
// API which arc interpolation moves by specifying start point, revolution angle and radius. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, revolution angle and radius in the specified  coordinates system.
// For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
// lAxisNo = 2 axis array , dCenterPos = center point X,Y array , dAngle = angle.
// uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
DWORD   __stdcall AxmCircleAngleMove(long lCoord, long *lAxisNo, double *dCenterPos, double dAngle, double dVel, double dAccel, double dDecel, DWORD uCWDir);
//==== continuous interpolation API ============================================================================================================================================;
//Set continuous interpolation axis mapping in specific coordinates system.
//(Start axis mapping number from 0)
// Caution: In the axis mapping, the input must be started from smaller number.
//         In here, the axis of smallest number becomes master.
DWORD    __stdcall AxmContiSetAxisMap(long lCoord, long lSize, long *lpAxesNo);
// Return continuous interpolation axis mapping in specific coordinates system.
DWORD    __stdcall AxmContiGetAxisMap(long lCoord, long *lpSize, long *lpAxesNo);
// Reset continuous interpolation axis mapping in specific coordinates system.
DWORD    __stdcall AxmContiResetAxisMap(long lCoordinate);
// Set continuous interpolation axis absolute/relative mode in specific coordinates system.
// (Caution : available to use only after axis mapping)
// St travel distance calculation mode of specific axis.
//uAbsRelMode : POS_ABS_MODE '0' - absolute coordinate system
//              POS_REL_MODE '1' - relative coordinate system
DWORD    __stdcall AxmContiSetAbsRelMode(long lCoord, DWORD uAbsRelMode);
// Return interpolation axis absolute/relative mode in specific coordinates system.
DWORD    __stdcall AxmContiGetAbsRelMode(long lCoord, DWORD *upAbsRelMode);
// API which verifies whether internal Queue for the interpolation move is empty in specific coordinate system.
DWORD    __stdcall AxmContiReadFree(long lCoord, DWORD *upQueueFree);
// API which verifies the number of interpolation move saved in internal Queue for the interpolation move in specific coordinate system
DWORD    __stdcall AxmContiReadIndex(long lCoord, long *lpQueueIndex);
// API which deletes all internal Queue saved for the continuous interpolation move in specific coordinate system
DWORD    __stdcall AxmContiWriteClear(long lCoord);
// Start registration of tasks to be executed in continuous interpolation at the specific  coordinate system. After call this API,
// all motion tasks to be executed before calling of AxmContiEndNode API are not execute actual motion, but are registered as continuous interpolation motion,
// and when AxmContiStart API is called, then the registered motions execute actually
DWORD    __stdcall AxmContiBeginNode(long lCoord);
// Finish registration of tasks to be executed in continuous interpolation at the specific  coordinate system.
DWORD    __stdcall AxmContiEndNode(long lCoord);
// Start continuous interpolation.
// if dwProfileset is  CONTI_NODE_VELOCITY(0), use continuous interpolation.
//                     CONTI_NODE_MANUAL(1)  , set profile interpolation use.
//                     CONTI_NODE_AUTO(2)    , use auto-profile interpolation.
DWORD    __stdcall AxmContiStart(long lCoord, DWORD dwProfileset, long lAngle);