Library/AXL(Library)/Visual Basic(Net)/AXM.vb


' The method to know offset value of Slave axis.
' A. Servo-On both master and slave.
' B. After set uSlHomeUse = 2 in AxmGantrySetEnableAPI, then search home by using  AxmHomeSetStart API.
' C. After search home, twisted offset value of master axis and slave axis can be seen by reading command value of master axis.
' D. Read Offsetvalue, and put it into dSlOffset argument of AxmGantrySetEnable API.
' E. As dSlOffset value is the slave axis value against to master axis, put its value with reversed sign as ?dSlOffset.
' F. dSIOffsetRange means the range of Slave Offset, it is used to originate error when it is out of the specified range.
' G. If the offset has been input into AxmGantrySetEnable API, in AxmGantrySetEnable API,after  set uSlHomeUse = 1 then search home by using AxmHomeSetStart API.

' In gentry move, return parameter set by user.
Public Declare Function AxmGantryGetEnable Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByRef upSlHomeUse As Integer, ByRef dpSlOffset As Double, ByRef dpSlORange As Double, ByRef upGatryOn As Integer) As Integer
' Motion module releases gentry move system control which two axes are linked mechanically.
Public Declare Function AxmGantrySetDisable Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByVal lSlaveAxisNo As Integer) As Integer


' Only for PCI-Rxx04-MLII.
' Set Synchronous compensation of Gentry System.
' lMasterGain, lSlaveGain : Set % value of Between the two axes about position deviation.
' lMasterGain, lSlaveGain : If Set Input 0 Not Use. Default value : 0%
Public Declare Function AxmGantrySetCompensationGain Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByVal lMasterGain As Integer, ByVal lSlaveGain As Integer) As Integer
' Return Synchronous compensation of Gentry System.
Public Declare Function AxmGantryGetCompensationGain Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByRef lpMasterGain As Integer, ByRef lpSlaveGain As Integer) As Integer


' Set position deviation range between master and slave.
' API for PCI-R1604 / PCI-R3200-MLIII only
' lMasterAxisNo : Gantry Master Axis No
' dErrorRange : Setting value for position deviation range.
' uUse : A value for mode setting.
'      ( 0 : Disable)
'      ( 1 : Normal mode)
'      ( 2 : Flag Latch mode)
'      ( 3 : Flag Latch mode + SSTOP when error is occured)
'      ( 4 : Flag Latch mode + ESTOP when error is occured)
Public Declare Function AxmGantrySetErrorRange Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByVal dErrorRange As Double, ByVal uUse As Integer) As Integer
' Return setting value about position deviation range between master and slave.
Public Declare Function AxmGantryGetErrorRange Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByRef dpErrorRange As Double, ByRef upUse As Integer) As Integer
' Return result of comparing position deviation value between master and slave.
' dwpStatus : FALSE(0) -> Range of position deviation between master and slave is less than setting range. (Normal state)
'             TRUE(1)  -> Range of position deviation between master and slave is greater than setting range. (Abnormal state)
' It is returned 'AXT_RT_SUCCESS' only when Gantry Enable && Master/Slave's servo on state is satisfied.
' Call the 'AxmGantryReadErrorRangeComparePos', if you want to reset Latch Flag in case of latch mode.
Public Declare Function AxmGantryReadErrorRangeStatus Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByRef dwpStatus As Integer) As Integer
' Return position deviation value between master and slave.
' Maintain position deviation value at time of previous error occurrence until next error is occured.
' You should read only when 'dwpStatus' is 1. If you read ComparePos continuously, response speed will be slowed down by overload.
Public Declare Function AxmGantryReadErrorRangeComparePos Lib "AXL.dll" (ByVal lMasterAxisNo As Integer, ByRef dpComparePos As Double) As Integer






'==== Regular interpolation API ============================================================================================================================================;
' Do linear interpolate.
' API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
' For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
Public Declare Function AxmLineMove Lib "AXL.dll" (ByVal lCoord As Integer, ByRef dpEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer

' Do linear interpolate. (Software)
' API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
' For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
Public Declare Function AxmLineMoveEx2 Lib "AXL.dll" (ByVal lCoord As Integer, ByRef dpEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer

' Interpolate 2 axis arc
' API which moves arc interpolation by specifying start point, ending point and center point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, ending point and center point in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dCenterPos = center point X,Y array , dEndPos = ending point X,Y array.
' uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
Public Declare Function AxmCircleCenterMove Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lAxisNo As Integer, ByRef dCenterPos As Double, ByRef dEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal uCWDir As Integer) As Integer


' API which arc interpolation moves by specifying middle point and ending point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying middle point and ending point in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dMidPos = middle point, X,Y array , dEndPos = ending point X,Y array, lArcCircle = arc(0), circle(1)
Public Declare Function AxmCirclePointMove Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lAxisNo As Integer, ByRef dMidPos As Double, ByRef dEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArcCircle As Integer) As Integer


Public Declare Function AxmCirclePointMoveEx Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lAxisNo As Integer, ByRef dMidPos As Double, ByRef dEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArcCircle As Integer, ByVal lArraySize As Integer) As Integer


' API which arc interpolation moves by specifying start point, ending point and radius. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, ending point and radius in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dRadius = radius, dEndPos = ending point X,Y array , uShortDistance = small circle(0), large circle(1)
' uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
Public Declare Function AxmCircleRadiusMove Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lAxisNo As Integer, ByVal dRadius As Double, ByRef dEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal uCWDir As Integer, ByVal uShortDistance As Integer) As Integer


' API which arc interpolation moves by specifying start point, revolution angle and radius. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, revolution angle and radius in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dCenterPos = center point X,Y array , dAngle = angle.
' uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
Public Declare Function AxmCircleAngleMove Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lAxisNo As Integer, ByRef dCenterPos As Double, ByVal dAngle As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal uCWDir As Integer) As Integer


'==== continuous interpolation API ============================================================================================================================================;
'Set continuous interpolation axis mapping in specific coordinates system.
'(Start axis mapping number from 0)
' Caution: In the axis mapping, the input must be started from smaller number.
'         In here, the axis of smallest number becomes master.
Public Declare Function AxmContiSetAxisMap Lib "AXL.dll" (ByVal lCoord As Integer, ByVal lSize As Integer, ByRef lpRealAxesNo As Integer) As Integer
' Return continuous interpolation axis mapping in specific coordinates system.
Public Declare Function AxmContiGetAxisMap Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lpSize As Integer, ByRef lpRealAxesNo As Integer) As Integer
    Public Declare Function AxmContiResetAxisMap Lib "AXL.dll" (ByVal lCoordinate As Integer) As Integer


' Set continuous interpolation axis absolute/relative mode in specific coordinates system.
' (Caution : available to use only after axis mapping)
' St travel distance calculation mode of specific axis.
' uAbsRelMode : POS_ABS_MODE '0' - absolute coordinate system
'               POS_REL_MODE '1' - relative coordinate system
Public Declare Function AxmContiSetAbsRelMode Lib "AXL.dll" (ByVal lCoord As Integer, ByVal uAbsRelMode As Integer) As Integer
' Return interpolation axis absolute/relative mode in specific coordinates system.
Public Declare Function AxmContiGetAbsRelMode Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upAbsRelMode As Integer) As Integer


' API which verifies whether internal Queue for the interpolation move is empty in specific coordinate system.
Public Declare Function AxmContiReadFree Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upQueueFree As Integer) As Integer
' API which verifies the number of interpolation move saved in internal Queue for the interpolation move in specific coordinate system
Public Declare Function AxmContiReadIndex Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lpQueueIndex As Integer) As Integer

' API which deletes all internal Queue saved for the continuous interpolation move in specific coordinate system
Public Declare Function AxmContiWriteClear Lib "AXL.dll" (ByVal lCoord As Integer) As Integer

